--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,17 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<meta name="title" content="PokeStore" />
+		<meta name="description" content="A maior loja de Pokémon do Brasil" />
 		<meta
-			name="description"
-			content="Web site created using create-react-app"
+			name="keywords"
+			content="pokemon, comprar, brasil, preço, barato"
 		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<meta name="robots" content="index, follow" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="language" content="Portuguese" />
+		<meta name="author" content="gamoridev" />
+
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +35,7 @@
 			href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"
 			rel="stylesheet"
 		/>
-		<title>React App</title>
+		<title>PokeStore</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
